Fix warnings, realise the grave responsibility of this project (aka. 1.16.5 build limit)